--- a/Extract_Transform_Load.ipynb
+++ b/Extract_Transform_Load.ipynb
@@ -6989,6 +6989,90 @@
     "                  'Based on':'based_on'\n",
     "                 }, axis='columns', inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add Ratings Data\n",
+    "# We could calculate some basic statistics like the mean and median rating \n",
+    "# for each movie, but a more useful summary is just to count how many times \n",
+    "# a movie received a given rating.\n",
+    "\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename the “userId” column to “count.”\n",
+    "\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can pivot this data so that movieId is the index, the columns will be \n",
+    "# all the rating values, and the rows will be the counts for each rating \n",
+    "# value.\n",
+    "\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We want to rename the columns so they’re easier to understand. \n",
+    "# We’ll prepend rating_ to each column with a list comprehension:\n",
+    "\n",
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use a left merge, since we want to keep everything in movies_df:\n",
+    "\n",
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finally, because not every movie got a rating for each rating level, there\n",
+    "# will be missing values instead of zeros. We have to fill those in ourselves, \n",
+    "# like this:\n",
+    "\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
